[project]
name = "pdf-combiner"
version = "0.1.0"
description = "Enter a folder and combine PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.8.2",
    "google-auth>=2.38.0",
    "google-cloud-storage>=3.1.0",
    "google-cloud-workflows>=1.18.1",
    "looker-sdk>=25.4.0",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
]
